[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=7]
radius = 2.0

[sub_resource type="SphereShape" id=6]

[sub_resource type="CylinderShape" id=4]
height = 1.0
radius = 6.0

[node name="Enemy" type="KinematicBody"]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Sphere" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="AttackArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
shape = SubResource( 4 )

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="AttackArea" to="." method="_targetInRange"]
[connection signal="body_exited" from="AttackArea" to="." method="_targetOutOfRange"]
[connection signal="timeout" from="AttackTimer" to="." method="_onAttackTimer"]
